Fixed collapsing menu
A little janky way, but it works

--- a/css/main.css
+++ b/css/main.css
@@ -1,6 +1,6 @@
 div.well{
   height: 250px;
-} 
+}
 
 .Absolute-Center {
   margin: auto;
@@ -9,7 +9,7 @@ div.well{
 }
 
 .Absolute-Center.is-Responsive {
-  width: 50%; 
+  width: 50%;
   height: 50%;
   min-width: 200px;
   max-width: 400px;
@@ -25,7 +25,7 @@ div.well{
   font-size: 3em;
   color: white;
   font-weight: 300;
-  
+
 }
 
 /* ==========================================================================
@@ -62,7 +62,8 @@ img {
 }
 
 .collapse-desc {
-    height: 100px;
+    height: auto;
+    max-height: 100px;
     text-overflow: ellipsis;
     overflow-y: hidden;
     transition: 1s !important;
